--- a/app/src/main/res/layout/activity_student_front_end.xml
+++ b/app/src/main/res/layout/activity_student_front_end.xml
@@ -15,6 +15,7 @@
 
         <TextView
             android:id="@+id/info_text"
+            android:text="CARD 1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v7.widget.CardView>
