--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0ca5fe"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
-        android:fontFamily="sans-serif-smallcaps"
+        android:layout_marginTop="132dp"
+        android:background="@android:drawable/editbox_dropdown_light_frame"
+        android:fontFamily="sans-serif"
         android:text="Welcome to RVCE Connect. Please enter credentials to login into the app.\nMake sure you are connected to College WiFi." />
 
     <EditText
@@ -23,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="204dp"
+        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:ems="10"
         android:hint="Enter College Email ID"
         android:inputType="textEmailAddress" />
@@ -34,17 +36,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:ems="10"
         android:hint="Enter password"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/signin"
-        android:layout_width="wrap_content"
+        android:layout_width="366dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="185dp"
+        android:background="@android:color/holo_blue_dark"
         android:text="SIGN IN" />
 
     <TextView
@@ -52,8 +56,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="34dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/common_google_signin_btn_text_dark_normal"
         android:text="Facing Issues in signing in?" />
 
     <TextView
@@ -63,4 +69,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="172.168.1.1" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="132dp"
+        android:layout_height="94dp"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/logo2" />
+
 </RelativeLayout>
