--- a/app/src/main/res/layout/activity_student_front_end.xml
+++ b/app/src/main/res/layout/activity_student_front_end.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="#5b29a2"
     android:backgroundTint="@android:color/darker_gray"
     android:orientation="vertical"
     tools:context=".StudentFrontEnd">
@@ -13,15 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="1"
-        android:background="@android:color/transparent"
+        android:background="#5b29a2"
         android:orientation="vertical">
 
+
         <android.support.v7.widget.CardView
-            android:id="@+id/cardView"
+            android:id="@+id/attendancecontainer"
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:layout_marginLeft="3dp"
+            android:clickable="true"
             app:cardBackgroundColor="@android:color/white"
-            app:cardCornerRadius="0dp"
+            app:cardCornerRadius="20dp"
             app:cardElevation="0.7dp"
             app:cardMaxElevation="1dp"
             app:cardPreventCornerOverlap="true"
@@ -29,80 +32,53 @@
             app:contentPadding="10dp"
             app:contentPaddingBottom="0dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
 
-                <ImageView
-                    android:id="@+id/img"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:contentDescription="CardImageViewDesc"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/attendance" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/img"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:contentDescription="CardImageViewDesc"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@drawable/attendance" />-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@id/img"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:fontFamily="sans-serif"
-                    android:gravity="center_vertical"
-                    android:text="IF TEXT NEEDS TO BE ADDED"
-                    android:textSize="18sp" />
+                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_below="@id/img"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginLeft="5dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginStart="5dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:fontFamily="sans-serif"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:gravity="center_vertical"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:text="IF TEXT NEEDS TO BE ADDED"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:textSize="18sp" />&ndash;&gt;-->
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@id/img"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginRight="5dp"
+                <!--&lt;!&ndash;<ImageButton&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_alignParentEnd="true"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_alignParentRight="true"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_below="@id/img"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginEnd="5dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginRight="5dp"&ndash;&gt;-->
 
-                    android:contentDescription="FavButtonDesc"
-                    android:src="@drawable/ic_favorite_border_black_24dp" />
+                <!--&lt;!&ndash;android:contentDescription="FavButtonDesc"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:src="@drawable/ic_favorite_border_black_24dp" />&ndash;&gt;-->
 
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
-
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardView2"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            app:cardBackgroundColor="@android:color/white"
-            app:cardCornerRadius="0dp"
-            app:cardElevation="0.7dp"
-            app:cardMaxElevation="1dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true"
-            app:contentPadding="10dp"
-            app:contentPaddingBottom="0dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/img2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="CardImageViewDesc"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/testscore" />
-            </RelativeLayout>
+            <!--</RelativeLayout>-->
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cardView3"
+            android:id="@+id/testscorecontainer"
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:layout_marginLeft="3dp"
+            android:clickable="true"
             app:cardBackgroundColor="@android:color/white"
-            app:cardCornerRadius="0dp"
+            app:cardCornerRadius="20dp"
             app:cardElevation="0.7dp"
             app:cardMaxElevation="1dp"
             app:cardPreventCornerOverlap="true"
@@ -110,18 +86,50 @@
             app:contentPadding="10dp"
             app:contentPaddingBottom="0dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
 
-                <ImageView
-                    android:id="@+id/img3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="CardImageViewDesc"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/timetable" />
-            </RelativeLayout>
+                <!--<ImageView-->
+                    <!--android:id="@+id/img2"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_alignParentTop="true"-->
+                    <!--android:contentDescription="CardImageViewDesc"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@drawable/testscore" />-->
+            <!--</RelativeLayout>-->
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/timetablecontainer"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginLeft="3dp"
+            android:clickable="true"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0.7dp"
+            app:cardMaxElevation="1dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="10dp"
+            app:contentPaddingBottom="0dp">
+
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
+
+                <!--<ImageView-->
+                    <!--android:id="@+id/img3"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:contentDescription="CardImageViewDesc"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@drawable/timetable" />-->
+            <!--</RelativeLayout>-->
 
         </android.support.v7.widget.CardView>
 
