--- a/app/src/main/res/layout/attendance_front.xml
+++ b/app/src/main/res/layout/attendance_front.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/buttonsmallback">
 
-            <ImageView
-                android:id="@+id/img"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="CardImageViewDesc"
-                android:scaleType="fitCenter"
-                android:src="@drawable/attendance" />
+                android:layout_height="100dp"
+                android:text="ATTENDANCE"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:textSize="50dp"
+                android:layout_centerInParent="true"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF" />
+
+
+
+            <!--<ImageView-->
+                <!--android:id="@+id/img"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:contentDescription="CardImageViewDesc"-->
+                <!--android:scaleType="fitCenter"-->
+                <!--android:background="@drawable/buttonsmallback" />-->
 
             <!--<TextView-->
             <!--android:layout_width="match_parent"-->
