--- a/app/src/main/res/layout/performance_graph.xml
+++ b/app/src/main/res/layout/performance_graph.xml
@@ -17,9 +17,7 @@
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:foregroundGravity="center"
-
-        />
+        android:layout_centerInParent="true"/>
 
 
 </RelativeLayout>
