--- a/app/src/main/res/layout/testscore_front.xml
+++ b/app/src/main/res/layout/testscore_front.xml
@@ -5,17 +5,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/buttonsmallback">
 
-        <ImageView
-            android:id="@+id/img2"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="CardImageViewDesc"
-            android:scaleType="fitCenter"
-            android:src="@drawable/testscore" />
+            android:layout_height="100dp"
+            android:text="TEST SCORE"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:textSize="50dp"
+            android:layout_centerInParent="true"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF" />
     </RelativeLayout>
 
 </LinearLayout>
