--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/loginbackground"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/text"
+    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_person_black_24dp"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/transparent"/>
+    
+
+
+    <com.tomer.fadingtextview.FadingTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="132dp"
-        android:background="@android:drawable/editbox_dropdown_light_frame"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="25dp"
+        android:background="@android:color/transparent"
         android:fontFamily="sans-serif"
-        android:text="Welcome to RVCE Connect. Please enter credentials to login into the app.\nMake sure you are connected to College WiFi." />
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:texts="@array/loginpage"
+        app:timeout="500"/>
 
     <EditText
         android:id="@+id/emailid"
@@ -24,7 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="189dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:ems="10"
         android:hint="Enter College Email ID"
@@ -34,8 +48,9 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="216dp"
         android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:ems="10"
         android:hint="Enter password"
@@ -43,39 +58,28 @@
 
     <Button
         android:id="@+id/signin"
-        android:layout_width="366dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="185dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="152dp"
         android:background="@android:color/holo_blue_dark"
         android:text="SIGN IN" />
 
     <TextView
         android:id="@+id/forgot"
-        android:layout_width="wrap_content"
+        android:layout_width="239dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="34dp"
         android:layout_marginEnd="60dp"
-        android:background="@drawable/common_google_signin_btn_text_dark_normal"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
         android:text="Facing Issues in signing in?" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="172.168.1.1" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="132dp"
-        android:layout_height="94dp"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true"
+   
         />
 
 </RelativeLayout>
