--- a/app/src/main/res/layout/attendance_front.xml
+++ b/app/src/main/res/layout/attendance_front.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:background="@drawable/backnewmaterial">
 
             <!--<TextView-->
@@ -70,7 +71,7 @@
 
             <!--android:contentDescription="FavButtonDesc"-->
             <!--android:src="@drawable/ic_favorite_border_black_24dp" />-->
-        </RelativeLayout>
+        </LinearLayout>
 
 
 </LinearLayout>
