--- a/app/src/main/res/layout/teacher_home.xml
+++ b/app/src/main/res/layout/teacher_home.xml
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<ScrollView
-    android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <ListView
+    <GridView
+        android:id="@+id/gridviewhome"
         android:layout_width="match_parent"
-        android:id="@+id/events"
-        android:layout_height="match_parent">
-    </ListView>
-
-
-
-
-
-
-
-
-</ScrollView>
-
-
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
+        android:layout_height="match_parent"
+        android:numColumns="2" />
 
 
 
