--- a/app/src/main/res/layout/teacher_counsel.xml
+++ b/app/src/main/res/layout/teacher_counsel.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
   <LinearLayout
+      android:background="@android:color/white"
       android:layout_width="match_parent"
       android:layout_weight="0.40"
       android:orientation="vertical"
@@ -141,6 +142,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:background="@android:color/white"
             android:orientation="horizontal"
             android:layout_height="0dp"
             android:layout_weight="1">
