--- a/app/src/main/res/layout/teacher_performance_dashboard.xml
+++ b/app/src/main/res/layout/teacher_performance_dashboard.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
+
+    <GridView
+        android:id="@+id/gridviewperformance"
+        android:layout_width="match_parent"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
+        android:layout_height="match_parent"
+        android:numColumns="2" />
+
+
 
 </LinearLayout>
